syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AutoReservation.Service.Grpc";

package AutoReservation;

service KundeService {
	rpc ReadAllKunden (google.protobuf.Empty)
		returns (KundeDTOList);

	rpc ReadKundeForId (KundeIdentifier)
		returns (KundeDTO);

	rpc InsertKunde (KundeDTO)
		returns (KundeIdentifier);
	
	rpc UpdateKunde (KundeDTO)
		returns (KundeIdentifier);

	rpc DeleteKunde (KundeDTO)
		returns (google.protobuf.Empty);
}

message KundeIdentifier {
	int32 id = 1;
}

message KundeDTO {
	int32 id = 1;
	google.protobuf.Timestamp geburtsdatum = 2; 
	string nachname = 3;
	string vorname = 4;
	bytes rowVersion = 5; 
}

message KundeDTOList {
	repeated KundeDTO kunden = 1;
}
